55555: SystemML Engine Enhancements - New permutation matrix multiply: mr pmmj (compiler/runtime, phase 1), incl tests and fix piggybacking by Shirish